# mein-wep

./: .gitignore  .gitmodules  .nojekyll  404.html  CLAUDE.md  GITHUB_PAGES.md  README.md  SUPABASE_APP_UPDATES.sql  SUPABASE_CONTACT_FIX.sql  SUPABASE_MIGRATIONS.md  SUPABASE_SECURITY_FIX.sql  SUPABASE_SETUP.sql  SUPABASE_SETUP_FIXED.sql  SUPABASE_VAULT_UPDATE.sql  about.html  auto_sync.bat  contact.html  devos.html  downloads.html  icon-generator.html  index.html  kaggle.json  king2-signin-test.json  king2-signin-v2.json  learning.html  llms.txt  manifest.json  offline.html  privacy.html  render.yaml  replacements.txt  robots.txt  sitemap.xml  skills-lock.json  sw.js  terms.html  test-rust.html  test-voice.html  vercel.json  روابط-الإدارة.txt
.claude/: launch.json
.testsprite/: ROUTE_MAP.md  test3.py  test_calculator_app.py  test_farm_game.py  test_games_page.py  test_maarifah_web.py  test_quiz_app.py  test_rust_game.py  test_settings_fix.py
.well-known/: assetlinks.json
Block Blast/: index.html  style.css
Bot tik tok/: .gitignore  START_PROJECT.bat
Geld/: index.html  license.txt  readme.txt  script.js  style.css
Rashid-app/: index.html  test.html
Rels AI/: Rels AI.code-workspace
admin/: dashboard.html  login.html
api/: contact.js  gemini.js  github.js
apks/: HOW-TO-RELEASE-UPDATE.md  calculator-app-v1.0.0.apk  farm-game-v2.0.0.apk  farm-game-v2.0.1.apk  farm-game-v2.1.0.apk  farm-game-v2.2.0.apk  farm-game-v2.3.0.apk  farm-game-v2.5.0.apk  kingcraft-game-v0.6.0.apk  quiz-app-v1.0.0.apk  quiz-app-v1.4.0.apk  quran-app-v1.0.0.apk  rust-game-v1.0.0.apk  rust-game-v1.1.0.apk  updates.json
blog/: building-a-game-ai-agent-in-javascript.html  building-a-pwa-with-service-workers.html  building-kingcraft-3d-game.html  css-aurora-glassmorphism-design.html  fine-tuning-llms-with-lora.html  flutter-clean-architecture.html  index.html  portfolio-optimization-tips.html  posts.json  rss.xml  supabase-backend-for-static-sites.html
calculator-vault/: index.html  manifest.json  sw.js
css/: admin.css  app-mode.css  devos.css  enhancements.css  mobile-improvements.css  redesign.css  style.css
denkmalen/: 404.html  index.html  index.txt  manifest.json  sw.js
design-concepts/: proposal-a-deep-signal-refined.html  proposal-b-ember.html  proposal-c-daylight.html  trial-v1.html  trial-v2.html  trial-v3.html
docs/: DESIGN_BACKUP.md  PRD.md
farm-game/: index.html  manifest.json  sw.js
game-hoster/: FIX_ISSUES.bat  README.md  next.config.ts  package.json  tsconfig.json
game-vault/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._tree.txt  _not-found.txt  index.html  vault.html  vault.txt
games/: index.html
games/kingcraft-game/: .gitignore  AGENT_PLAN.md  CMakeLists.txt  README.md  ROADMAP_EXECUTION.md  analysis-report.html  build.bat  build.ps1  build_bot.ps1  capacitor.config.json  capacitor.config.ts  fix-cache.html  index.html  manifest.json  move_project.ps1  package.json  setup_and_run.bat  showcase.html  sw.js  version.json  vite.config.js
games/kingcraft-game/.playwright-mcp/: page-2026-06-10T14-59-40-463Z.yml  page-2026-06-10T16-08-58-534Z.yml
games/kingcraft-game/assets/biomes/: volcanic_highlands.json
games/kingcraft-game/assets/blocks/: titanium_ore.json
games/kingcraft-game/assets/entities/: titan_golem.json
games/kingcraft-game/assets/items/: titanium_pickaxe.json
games/kingcraft-game/assets/loot_tables/chests/: titan_treasure.json
games/kingcraft-game/assets/recipes/: titanium_ingot.json
games/kingcraft-game/assets/worldgen/: ore_titanium.json
games/kingcraft-game/css/: health.css  hud.css  inventory.css  menu.css
games/kingcraft-game/docs/: 00-INDEX.md  01-GDD.md  02-TDD.md  03-BLOCKS.md  04-ITEMS.md  05-ENTITIES.md  06-WORLDGEN.md  07-MULTIPLAYER.md  08-DATABASE.md  09-API.md  10-ROADMAP.md  11-ECS.md  12-RENDERING.md  13-PHYSICS.md  14-PERFORMANCE.md
games/kingcraft-game/js/: main.js
games/kingcraft-game/js/blocks/: BlockDrops.js  BlockTexture.js
games/kingcraft-game/js/crafting/: Crafting.js  Furnace.js  Recipes.js  Smelting.js
games/kingcraft-game/js/entities/: Entity.js  EntityManager.js  Mob.js  MobRenderer.js
games/kingcraft-game/js/items/: Items.js
games/kingcraft-game/js/player/: Health.js  Inventory.js  Player.js  Tools.js
games/kingcraft-game/js/ui/: Hotbar.js  InventoryUI.js  MenuSystem.js
games/kingcraft-game/js/utils/: Constants.js  Noise.js  Pathfinding.js  Raycast.js  SaveLoad.js  SoundManager.js  WorldManager.js
games/kingcraft-game/js/world/: BlockData.js  Chunk.js  Farming.js  TerrainGen.js  World.js
games/kingcraft-game/libs/glad/include/glad/: gl.h
games/kingcraft-game/libs/glad/src/: glad.c
games/kingcraft-game/schemas/: block_schema.json
games/kingcraft-game/shaders/: fragment.glsl  vertex.glsl
games/kingcraft-game/src/: main.cpp
games/kingcraft-game/src/ai/: ai_system.cpp  ai_system.h
games/kingcraft-game/src/core/: types.cpp  types.h
games/kingcraft-game/src/ecs/: components.h  ecs.cpp  ecs.h
games/kingcraft-game/src/entities/: item_entity.cpp  item_entity.h
games/kingcraft-game/src/game/: crafting.cpp  crafting.h  game.cpp  game.h  items.cpp  items.h  player.cpp  player.h
games/kingcraft-game/src/render/: renderer.h  renderer_opengl.cpp  shader.cpp  shader.h
games/kingcraft-game/src/world/: block_registry.cpp  block_registry.h  chunk.cpp  chunk.h  mesh_gen.cpp  mesh_gen.h  world_gen.cpp  world_gen.h
games/kingcraft-game/wiki-data/: biomes.json  mobs.json
islams wep/: .gitignore  README.md  vercel.json
js/: admin.js  app-controls.js  game-controls.js  gemini-config.example.js  learning.js  pwa-installer.js  rashid-ai-v2.js  script.js  supabase-config.js  unified-game-controls.js  update-checker.js
okf/: apps.md  building-a-pwa-with-service-workers.md  calculator-app.md  contact.md  flutter-clean-architecture.md  home.md  kingcraft-game.md  portfolio-optimization-tips.md  privacy.md  quiz-app.md  rust-game.md  supabase-backend-for-static-sites.md  terms.md
quiz-app/: index.html  manifest.json  sw.js
quran-app/: index.html  sw.js  (+1 more)
(+1588 files in other folders)
